As a bank I can accept incoming transactions from another bank [Delivers #175424743]
